--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "rc-tween-one": "^2.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-map-gl": "^5.0.11",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
