--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "rc-tween-one": "^2.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-draggable": "^4.0.3",
     "react-map-gl": "^5.0.11",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
