--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-dom": "^16.9.0",
     "react-draggable": "^4.0.3",
     "react-map-gl": "^5.0.11",
+    "react-redux": "^7.1.1",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
     "styled-components": "^5.0.0-beta.9"
   },
   "scripts": {
