--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
     "antd": "^3.23.6",
     "deck.gl": "^7.3.1",
     "eslint-config-airbnb": "^18.0.1",
