--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
+    "formik": "^1.5.8",
     "install": "^0.13.0",
     "npm": "^6.11.3",
     "rc-animate": "^2.10.0",
