--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loaders.gl/core": "^1.3.3",
+    "@loaders.gl/gltf": "^1.3.3",
+    "@loaders.gl/obj": "^1.3.3",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "antd": "^3.23.6",
@@ -13,6 +16,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "formik": "^1.5.8",
     "install": "^0.13.0",
+    "luma.gl": "^7.3.2",
     "npm": "^6.11.3",
     "rc-animate": "^2.10.0",
     "rc-tween-one": "^2.6.3",
