--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@deck.gl/core": "^7.3.3",
+    "@deck.gl/mesh-layers": "^7.3.3",
     "@loaders.gl/core": "^1.3.3",
     "@loaders.gl/gltf": "^1.3.3",
     "@loaders.gl/obj": "^1.3.3",
