--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@deck.gl/core": "^7.3.3",
-    "@deck.gl/mesh-layers": "^7.3.3",
     "@loaders.gl/core": "^1.3.3",
     "@loaders.gl/gltf": "^1.3.3",
     "@loaders.gl/obj": "^1.3.3",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "antd": "^3.23.6",
+    "d3-scale": "^3.1.0",
     "deck.gl": "^7.3.1",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
