--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.4.3",
     "antd": "^3.23.6",
+    "canvas-sketch-cli": "^1.11.6",
     "d3-scale": "^3.1.0",
     "deck.gl": "^7.3.1",
     "eslint-config-airbnb": "^18.0.1",
@@ -16,6 +17,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
     "formik": "^1.5.8",
+    "global": "^4.4.0",
     "install": "^0.13.0",
     "luma.gl": "^7.3.2",
     "npm": "^6.11.3",
