--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-draggable": "^4.0.3",
+    "react-https-redirect": "^1.1.0",
     "react-map-gl": "^5.0.11",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.0",
