--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "Unconstained experiment",
-  "name": "Unconstained experiment",
+  "short_name": "Map experiment",
+  "name": "Map experiment",
   "icons": [
     {
-      "src": "circle.ico",
+      "src": "1circle.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
