--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
+    "firebase": "^7.5.0",
     "formik": "^1.5.8",
     "global": "^4.4.0",
     "install": "^0.13.0",
